# EveryThird

./: Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: docker-image.yml
EveryThird/: asgi.py  settings.py  urls.py  wsgi.py
lyft_app/: apps.py  models.py  serializers.py  views.py
